# robot_explore

./: .gitignore  .gitmodules  README.md  activate_env.sh  common_setup.sh  future_works.md  lqtech_commands.txt  lqtech_notes.md  setup_envs.sh
.cursor/rules/: project_rules.mdc
.cursor/skills/view-video/: SKILL.md
analysis/: environment.yml
analysis/src/: metrics.py
gauss_splat/: config.yml  environment.yml  gauss_splat_setup.sh  post_install.sh
gauss_splat/src/: reconstruct.py  segment.py
meshroom/: config.yml  meshroom_setup.sh
meshroom/src/: reconstruct.py
perception/: environment.yml
perception/src/: detector.py
planning/: environment.yml
planning/src/: pathfinder.py
ros2_stack/: config.yml  ros2_stack_setup.sh
ros2_stack/ws/src/panda_pick_place/: package.xml  setup.cfg  setup.py
ros2_stack/ws/src/panda_pick_place/config/: controllers.yaml  panda.ros2_control.xacro
ros2_stack/ws/src/panda_pick_place/launch/: pick_place.launch.py
ros2_stack/ws/src/panda_pick_place/panda_pick_place/: bt_nodes.py  pick_place_node.py
ros2_stack/ws/src/x3plus_description/: CMakeLists.txt  package.xml
ros2_stack/ws/src/x3plus_description/config/: joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  x3plus.srdf
ros2_stack/ws/src/x3plus_description/urdf/: x3plus.ros2_control.xacro  x3plus.urdf
ros2_stack/ws/src/x3plus_pick_place/: package.xml  setup.cfg  setup.py
ros2_stack/ws/src/x3plus_pick_place/config/: controllers.yaml  pick_place_tree.yaml
ros2_stack/ws/src/x3plus_pick_place/launch/: pick_place.launch.py
ros2_stack/ws/src/x3plus_pick_place/x3plus_pick_place/: bt_nodes.py  ik_solver.py  pick_place_node.py
simulation/: config.yml  environment.yml  post_install.sh  simulation_setup.sh
simulation/src/: import_mesh.py  pick_and_place.py  ros2_pick_and_place.py  sim_runner.py
vla_x3plus/: config.yml  environment.yml  run_pick_place.sh  vla_x3plus_setup.sh
vla_x3plus/models/: x3plus_mujoco.xml
vla_x3plus/patches/: lerobot_groot_n1_dataclass.patch
vla_x3plus/src/: env.py  mujoco_bridge_node.py  pick_and_place.py  record_dataset.py  record_dataset_ros2.py  scripted_controller.py  train.sh
vla_x3plus/urdf/: x3plus.urdf
