<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>x3plus_pick_place</name>
  <version>0.2.0</version>
  <description>YAML-configured BehaviorTree pick-and-place for the X3Plus arm with decomposed motion</description>
  <maintainer email="dev@robot-explore.local">robot_explore</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>ament_index_python</depend>
  <depend>controller_manager</depend>
  <depend>forward_command_controller</depend>
  <depend>joint_state_broadcaster</depend>
  <depend>joint_trajectory_controller</depend>
  <depend>moveit_msgs</depend>
  <depend>moveit_ros_move_group</depend>
  <depend>py_trees</depend>
  <depend>robot_state_publisher</depend>
  <depend>tf2_ros</depend>
  <depend>x3plus_description</depend>

  <buildtool_depend>ament_python</buildtool_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
